<resources>
    <string name="app_name">WhatsApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="text_menu_photo">PHOTO</string>
    <string name="text_menu_calls">CALLS</string>
    <string name="text_menu_chats">CHATS</string>
    <string name="text_menu_more">MORE</string>
    <string name="text_menu_search">SEARCH</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_menu_contacts">Contacts</string>
    <string name="text_type_image">Image</string>
    <string name="text_type_audio">Audio</string>
    <string name="text_type_video">Video</string>
    <string name="text_type_text">Text</string>
    <string name="text_status_sent">Sent</string>
    <string name="text_status_delivered">Delivered</string>
    <string name="text_status_read">Read</string>
</resources>