<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/photoFragment"
        android:icon="@drawable/ic_photo"
        android:title="@string/text_menu_photo"
        android:enabled="true"/>

    <item
        android:id="@+id/callsFragment"
        android:icon="@drawable/ic_call"
        android:title="@string/text_menu_calls"/>

    <item
        android:id="@+id/chatsFragment"
        android:icon="@drawable/ic_chat"
        android:title="@string/text_menu_chats"/>

    <item
        android:id="@+id/contactsFragment"
        android:icon="@drawable/ic_contacts"
        android:title="@string/text_menu_photo"/>

    <item
        android:id="@+id/moreFragment"
        android:icon="@drawable/ic_more"
        android:title="@string/text_menu_more"/>


</menu>